fix overlap of mac addr into configurations page (#94)

--- a/wizard/app/styles/main.css
+++ b/wizard/app/styles/main.css
@@ -3228,6 +3228,10 @@ a.black:focus, a.black:hover, a.black:active {
   width: 75px !important;
 }
 
+.config-list-devices {
+  display: initial !important;
+}
+
 .input-group {
   margin-bottom: 15px;
 }
